Some register working

--- a/client/sandberg-movie/src/assets/sass/main.sass
+++ b/client/sandberg-movie/src/assets/sass/main.sass
@@ -1,6 +1,9 @@
 @import '~bulma/bulma'
 $backgrounds: (foo: '/img/foo.jpg', bar: '/img/bar.jpg')
 
-$primary: $purple
+//$primary: $purple
 
 
+
+.no_match
+  background: #F3C3C3
